infrastructure/base/gapi/example-public-gateway.yaml
# This manifest is not deployed. This is just an example of how to create a public gateway for the platform.
# It uses cert-manager to provision a certificate for the gateway. The certificate is referenced in the gateway spec.

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: platform-public
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
      service.beta.kubernetes.io/aws-load-balancer-name: "ogenki-platform-public-gateway"
      service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: instance
      service.beta.kubernetes.io/aws-load-balancer-type: "external"
  listeners:
    - name: http
      hostname: "myapp.${domain_name}"   # one listener per hostname; never a wildcard
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - observability
      tls:
        mode: Terminate
        certificateRefs:
          - name: myapp-public-tls
